--- a/data/raw_data_and_processing/Airbnb_Data_Pre-Processing.Rmd
+++ b/data/raw_data_and_processing/Airbnb_Data_Pre-Processing.Rmd
@@ -14,7 +14,7 @@ library(readr)
 
 ```{r,warning =FALSE}
 # Import data
-df <- read.csv(file = '/Users/chenzhiang/Desktop/CASA/CSAS0006DSSS/Assessment/Project/data/raw_data_and_processing/Chicago_Airbnb_Listings_Raw.csv')
+df <- read.csv(file = 'https://raw.githubusercontent.com/DanteChen0825/ChicagoAirbnb/main/data/raw_data_and_processing/Chicago_Airbnb_Listings_Raw.csv')
 # Select relevant column for the model
 df_1 <- select(df, host_since, host_is_superhost, host_listings_count,	host_identity_verified, neighbourhood_cleansed, latitude, longitude, property_type, room_type, accommodates, bathrooms_text, bedrooms, beds, amenities, price, minimum_nights, maximum_nights, availability_30, availability_60, availability_90, availability_365, number_of_reviews,number_of_reviews_ltm, number_of_reviews_l30d, review_scores_rating, review_scores_accuracy, review_scores_cleanliness, review_scores_checkin, review_scores_communication, review_scores_location, review_scores_value, instant_bookable, reviews_per_month)
 
